--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:wght@100..900&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MindSync</title>
+  <title>CerebroOnline</title>
 </head>
 
 <body>
